fixing label being cut off on results page

--- a/app/assets/stylesheets/ualib-discovery.scss
+++ b/app/assets/stylesheets/ualib-discovery.scss
@@ -345,7 +345,8 @@ font-size: 18px;
 	font-size: 15px;
 }
 .dl-horizontal dt {
-  width: 140px;
+  width: 160px;
+  margin-right: 5px;
 }
 .dl-horizontal dd {
   margin-left: 145px;
